tests/snapshots/file@operator@add_nil_nil.lox.snap
---
source: tests/common/mod.rs
description: "nil + nil; // expect runtime error: Operands must be two numbers or two strings.\n"
input_file: test_files/operator/add_nil_nil.lox
---
OUT: 

===
ERR: 
  × invalid operands, expected two numbers or string
   ╭────
 1 │ nil + nil; // expect runtime error: Operands must be two numbers or two strings.
   ·     ┬
   ·     ╰── here
   ╰────
